# mechanica

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  sdkconfig
main/: hello_world_main.c  hello_world_main.c.old  main.c
sim/: README.md  mechanica-sim.py  mechanica-sim_bak.py  mechanica-sim_new_UI.py
sim/examples/: finite_differences.py  monte_carlo_sampling.py
sim/src/: \  kinematics.py  timer.py
src/: main.c
src/components/libcommdev/: .gitignore  CMakeLists.txt  README.md  component.mk
src/components/libcommdev/include/libcommdev/: pwm.h
src/components/libcommdev/src/pwm/: servo_pwm.c
